# quantum-prototype-template

./: .buildinfo  .gitignore  .travis.yml  CONTRIBUTING.md  README.md  ecosystem.json  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py  test.py  tox.ini
.doctrees/: environment.pickle  index.doctree
.doctrees/apidocs/: index.doctree  template.doctree
.doctrees/how_tos/: example_how_to.doctree  index.doctree
.doctrees/stubs/: prototype_template.template_module.TemplateClass.doctree
.doctrees/tutorials/: example_tutorial.doctree  index.doctree
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement_request.md  feature_request.md
.github/workflows/: README.md  citation.yml  coverage.yml  docs.yml  ecosystem.yml  lint.yml  test_development_versions.yml  test_latest_versions.yml  test_minimum_versions.yml  tests.yml
_modules/: index.html
_sources/: index.rst.txt
_sources/stubs/: prototype_template.template_module.TemplateClass.rst.txt
_static/: documentation_options.js
apidocs/: index.html  template.html
docs/: README.md  beginners_guide.md  conf.py  file-map-and-description.md  quickstart_guide.md
docs/apidocs/: index.rst  template.rst
how_tos/: example_how_to.html  example_how_to.ipynb  index.html
prototype_template/: __init__.py  template_class.py
stubs/: prototype_template.template_module.TemplateClass.html
tests/: README.md  test_template_class.py
tutorials/: example_tutorial.html  example_tutorial.ipynb  index.html
(+7 files in other folders)
